--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/fruitshop?allowPublicKeyRetrieval=true&useSSL=false
-server.port=8080
-# MySQL username and password 
-spring.datasource.username=root
-spring.datasource.password=minh9102000
-
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.dbcp.test-while-idle=true
-spring.datasource.dbcp.validation-query=SELECT 1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.hibernate.show_sql=true
-spring.jpa.hibernate.format_sql=true
-
-## Set view directory
-spring.mvc.view.prefix=/WEB-INF/view/
-spring.mvc.view.suffix=.jsp
-
-## resource handler
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/fruitshop?allowPublicKeyRetrieval=true&useSSL=false
+#server.port=8080
+## MySQL username and password 
+#spring.datasource.username=root
+#spring.datasource.password=minh9102000
+#
+## Keep the connection alive if idle for a long time (needed in production)
+#spring.datasource.dbcp.test-while-idle=true
+#spring.datasource.dbcp.validation-query=SELECT 1
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.hibernate.show_sql=true
+#spring.jpa.hibernate.format_sql=true
+#
+### Set view directory
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
+#
+### resource handler
+#
