--- a/config/spring-config/application.properties
+++ b/config/spring-config/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.hibernate.show_sql=true
 spring.jpa.hibernate.format_sql=true
+
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
