--- a/config/spring-config/application.properties
+++ b/config/spring-config/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fruitshop?allowPublicKeyRetrie
 server.port=8080
 # MySQL username and password 
 spring.datasource.username=root
-spring.datasource.password=minh9102000
+spring.datasource.password=thaind123!@#
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.dbcp.test-while-idle=true
