feat - update image and upload image for cate/product

--- a/config-sample/configuration.properties
+++ b/config-sample/configuration.properties
@@ -1,2 +1,6 @@
 resolve_prefix_mvc=/WEB-INF/view/
 resolve_suffix_mvc=.jsp
+
+relative_upload_dir=uploads
+category_upload_dir=categories
+product_upload_dir=products
