feat - update fronend, contact api

--- a/config-sample/spring-config/application.properties
+++ b/config-sample/spring-config/application.properties
@@ -18,3 +18,7 @@ spring.jpa.hibernate.format_sql=true
 ## Set view directory
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+# handle uploaded file size
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=10MB
