feat - update https for application

--- a/config-sample/spring-config/application.properties
+++ b/config-sample/spring-config/application.properties
@@ -22,3 +22,10 @@ spring.mvc.view.suffix=.jsp
 # handle uploaded file size
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=10MB
+
+# ssl certificate configuration
+server.ssl.key-store=file:config/cert.p12
+server.ssl.key-store-password=thai123@$
+
+server.ssl.keyStoreType=PKCS12
+server.ssl.enabled=true
