feat - update create new product, change path api and refactor code

--- a/config-sample/spring-config/application.properties
+++ b/config-sample/spring-config/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/fruitshop?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/fruitshop?allowPublicKeyRetrieval=true&useSSL=false&autoReconnect=True
 server.port=8080
 # MySQL username and password 
 spring.datasource.username=root
