feature - update blog api

--- a/config-sample/configuration.properties
+++ b/config-sample/configuration.properties
@@ -4,3 +4,4 @@ resolve_suffix_mvc=.jsp
 relative_upload_dir=uploads
 category_upload_dir=categories
 product_upload_dir=products
+blog_upload_dir=blogs
