--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ configurations {
     }
 }
 
+configurations {
+    //avoid multiple binding
+    all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+}
+
 repositories {
     mavenCentral()
 }
