--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
     // https://github.com/momo-wallet/java
     implementation group: 'io.github.momo-wallet', name: 'momopayment', version: '1.0'
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j', version: '1.3.8.RELEASE'
+
 }
 
 test {
