--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20210307'
 
     // https://github.com/momo-wallet/java
-    implementation group: 'io.github.momo-wallet', name: 'momopayment', version: '1.0'
+    implementation (group: 'io.github.momo-wallet', name: 'momopayment', version: '1.0') {
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
+    }
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j', version: '1.3.8.RELEASE'
