--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation (group: 'io.github.momo-wallet', name: 'momopayment', version: '1.0') {
         exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     }
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j', version: '1.3.8.RELEASE'
