--- a/config-sample/spring-config/application.properties
+++ b/config-sample/spring-config/application.properties
@@ -29,3 +29,5 @@ server.ssl.key-store-password=thai123@$
 
 server.ssl.keyStoreType=PKCS12
 server.ssl.enabled=true
+
+jwt.secret = G8jlFBuGIlYn1Cj1EWok9MejT1+rUxzjV/OTNgmyJOw=
