feature - design custom update for user, update controller, refactor service ...

--- a/config-sample/configuration.properties
+++ b/config-sample/configuration.properties
@@ -5,3 +5,4 @@ relative_upload_dir=uploads
 category_upload_dir=categories
 product_upload_dir=products
 blog_upload_dir=blogs
+user_avatar_upload_dir=avatars
