--- a/config-sample/spring-config/application.properties
+++ b/config-sample/spring-config/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/fruitshop?allowPublicKeyRetrieval=true&useSSL=false&autoReconnect=True
+server.address=0.0.0.0
 server.port=8080
 # MySQL username and password 
 spring.datasource.username=root
