feature - pool job, worker design send email flow

--- a/config-sample/configuration.properties
+++ b/config-sample/configuration.properties
@@ -6,3 +6,6 @@ category_upload_dir=categories
 product_upload_dir=products
 blog_upload_dir=blogs
 user_avatar_upload_dir=avatars
+
+mail_service=1
+mail_template=1
