--- a/config-sample/configuration.properties
+++ b/config-sample/configuration.properties
@@ -8,4 +8,10 @@ blog_upload_dir=blogs
 user_avatar_upload_dir=avatars
 
 mail_service=1
-mail_template=1
+invoice_mail_template=invoice_mail_template.html
+
+email_auth_protocol=tls
+email_host=smtp.gmail.com
+email_port=587
+email_username=username
+email_password=password
