--- a/config-sample/configuration.properties
+++ b/config-sample/configuration.properties
@@ -15,3 +15,10 @@ email_host=smtp.gmail.com
 email_port=587
 email_username=username
 email_password=password
+
+momo_partner_code=MOMOZ16820211214
+momo_access_key=lR6BvNhh7v87g4Ff
+momo_secret_key=S9zu2fmRcpXvsQam1dRylrxYvhqZZGg7
+momo_endpoint=https://test-payment.momo.vn/gw_payment/transactionProcessor
+momo_return_url=https://d49f-58-186-58-152.ngrok.io/v1/api/transactions/momo_transaction
+momo_notify_url=https://d49f-58-186-58-152.ngrok.io/v1/api/transactions/momo_transaction
