feature - configuration email group7 site and momo

--- a/config-sample/configuration.properties
+++ b/config-sample/configuration.properties
@@ -13,12 +13,12 @@ invoice_mail_template=invoice_mail_template.html
 email_auth_protocol=tls
 email_host=smtp.gmail.com
 email_port=587
-email_username=username
-email_password=password
+email_username=fruitshop299@gmail.com
+email_password=Fruitshop@299
 
-momo_partner_code=MOMOZ16820211214
-momo_access_key=lR6BvNhh7v87g4Ff
-momo_secret_key=S9zu2fmRcpXvsQam1dRylrxYvhqZZGg7
+momo_partner_code=MOMOFI0D20211216
+momo_access_key=xoBsZPJrArYUxvjY
+momo_secret_key=CUaixIC7rjpqp1zrCU5IOHv1HgpOE3fz
 momo_endpoint=https://test-payment.momo.vn/gw_payment/transactionProcessor
 momo_return_url=https://d49f-58-186-58-152.ngrok.io/v1/api/transactions/momo_transaction
 momo_notify_url=https://d49f-58-186-58-152.ngrok.io/v1/api/transactions/momo_transaction
