revoke sensitive information

--- a/config-sample/configuration.properties
+++ b/config-sample/configuration.properties
@@ -13,12 +13,12 @@ invoice_mail_template=invoice_mail_template.html
 email_auth_protocol=tls
 email_host=smtp.gmail.com
 email_port=587
-email_username=username
-email_password=password
+email_username=
+email_password=
 
-momo_partner_code=MOMOZ16820211214
-momo_access_key=lR6BvNhh7v87g4Ff
-momo_secret_key=S9zu2fmRcpXvsQam1dRylrxYvhqZZGg7
-momo_endpoint=https://test-payment.momo.vn/gw_payment/transactionProcessor
-momo_return_url=https://d49f-58-186-58-152.ngrok.io/v1/api/transactions/momo_transaction
-momo_notify_url=https://d49f-58-186-58-152.ngrok.io/v1/api/transactions/momo_transaction
+momo_partner_code=
+momo_access_key=
+momo_secret_key=
+momo_endpoint=
+momo_return_url=
+momo_notify_url=
