remove security problem

--- a/config-sample/spring-config/application.properties
+++ b/config-sample/spring-config/application.properties
@@ -32,3 +32,6 @@ server.ssl.keyStoreType=PKCS12
 server.ssl.enabled=true
 
 jwt.secret = G8jlFBuGIlYn1Cj1EWok9MejT1+rUxzjV/OTNgmyJOw=
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
