--- a/build.gradle
+++ b/build.gradle
@@ -53,12 +53,12 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20210307'
 
     // https://github.com/momo-wallet/java
-    implementation (group: 'io.github.momo-wallet', name: 'momopayment', version: '1.0') {
+    implementation(group: 'io.github.momo-wallet', name: 'momopayment', version: '1.0') {
         exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     }
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j', version: '1.3.8.RELEASE'
 
@@ -85,5 +85,29 @@ task zip(type: Zip) {
 /*    from("$buildDir" + '/libs') {
         include '*.jar'
     }*/
+}
+
+
+jar {
+    manifest {
+        attributes(
+                'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' '),
+                'Main-Class': 'com.group7.fruitswebsite.Start'
+        )
+    }
+}
+
+task fatJar(type: Jar) {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    manifest.from jar.manifest
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+    with jar
 }
 
